# Python_Modules_42Be

a_maze_ing/: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml
a_maze_ing/mazegen/: __init__.py  display.py  generator.py  parse_input.py  writer.py
a_maze_zing/:  jjjj.txt  a_maze_ing.py  a_maze_ing_test.py  default_config.txt  mazegen.py  parse_input.py  parsing2.py  resources.txt  test.txt  testcode.py
a_maze_zing/amazezing_test/: a_maze_ing.py  config_parser.py  default_config.txt  display.py  maze.py  maze.txt
m0/ex1/: ft_plot_area.py
m0/ex2/: ft_harvest_total.py
m0/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
m0/ex6/: ft_garden_summary.py
m0/ex7/: ft_seed_inventory.py
m01/: ft_garden_analitics(1).py
m01/ex0/: ft_garden_intro.py
m01/ex1/: ft_garden_data.py
m01/ex2/: ft_plant_growth.py
m01/ex3/: ft_plant_factory.py
m01/ex4/: ft_garden_security.py
m01/ex5/: ft_plant_types.py
m01/ex6/: ft-garden_analytics.py  ft_garden_analitics.py
m02/ex0/: ft_first_exception.py
m02/ex1/: ft_different_errors.py
m02/ex2/: ft_custom_errors.py
m02/ex3/: ft_finally_block.py
m02/ex4/: ft_raise_errors.py
m02/ex5/: ft_garden_management.py
m03/ex0/: ft_command_quest.py
m03/ex1/: ft_score_analytics.py
m03/ex2/: ft_coordinate_system.py
m03/ex4/: ft_inventory_system.py
m06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
m07/: __init__.py
m08/ex01/: info.txt  loading.py  loading1.py  pyproject.toml  test.py
(+60 files in other folders)
